# FastAPI-Ecommerce

./: Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: .dockerignore  .gitignore  main.py  schemas.py
app/backend/: .env.example  db.py  db_depends.py  settings.py
app/migrations/: env.py
app/migrations/versions/: 20dfb8d6ebc0_initial_migration.py  7bbccf7db999_add_review_and_rating_models.py  842821869762_create_user_model.py  9e81d52975e7_mig2_test.py
app/models/: category.py  products.py  review.py  user.py
app/routers/: __init__.py  auth.py  category.py  products.py  reviews.py
tests/: conftest.py  test_main.py
tests/auth/: conftest.py  test_auth.py
tests/category/: conftest.py  test_category.py
tests/products/: conftest.py  test_products.py
tests/reviews/: test_reviews.py
