[project]
name = "fastapi-ecommerce"
version = "0.1.0"
description = ""
authors = [
    {name = "gewoggewog",email = "gewoggewog@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[all] (>=0.116.1,<0.117.0)",
    "greenlet (>=3.2.4,<4.0.0)",
    "black (>=25.1.0,<26.0.0)",
    "pylint (>=3.3.8,<4.0.0)",
    "sqlalchemy[all] (>=2.0.43,<3.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "alembic[all] (>=1.16.5,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
